# codecnv

./: CHANGES_ja.txt  Makefile.in  README.txt  README_j.txt  a  aclocal.m4  brgtconv.c  config.h.in  configure  configure.ac  convert.h  copyright  dyn_table.c  error.c  esc_process.c  euc_profile.txt  genoconv.c  in_code_table.c  in_converter.c  in_decoder.c  oconv.c  oconv.h  out_code_table.c  out_encoder.c  plug_convert.c  preconvert.c  skf-210_kdev.kdev4  skf.1  skf.1j  skf.c  skf.h  skf_convert.h  skf_convert.i  skf_fileio.c  skf_fileio.h  tags  ucodoconv.c  uni_table_gen.c  uni_table_patch.c  wwx  (+1 more)
debian/: README.debian  changelog  control  copyright  dirs  prerm  rules
debian/source/: lintian-overrides
doc/: 1.Introduction.txt  2.intenal_code.txt  3.charset.txt  4.moji_table.txt  5.languages.txt  6.Encoding.txt
libskf/: CMakeLists.txt  libskf.kdev4
po/: ja.po
rpm/SPECS/: skf.spec
scripts/: find-perl  missing  mkinstalldirs  parse_uni.p  setup.py
table/: readme.txt
